--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Erikwski - freelancer developer</title>
                 
     <!-- OUR STYLESHEET -->
-    <link rel="stylesheet" href="style.css" type="text/css" media="all">
+    <link rel="stylesheet" href="coming_soon.css" type="text/css" media="all">
     
 </head>
 
