--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Erikwski - freelancer developer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Erikwski - Software developer</title>
+    <meta name="description" content="Erikwski - Software developer" />
+    <meta name="keywords" content="" />
+    <link rel="icon" type="image/png" href="logo.png" />
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      sizes="144x144"
+      href="logo.png"
+    />
+
+    <meta name="author" content="erikwski" />
 
     <!-- OUR STYLESHEET -->
     <link rel="stylesheet" href="coming_soon.css" type="text/css" media="all" />
