Aggiornata partita iva e link github nel footer

--- a/index.html
+++ b/index.html
@@ -414,12 +414,12 @@
 
                 <div class="row s-footer__top">
                     <div class="column lg-5 md-8 stack-on-700 s-footer__block contact-address">
-                        <h4 class="h6">Dove puoi trovarmi</h4>
+                        <h4 class="h6">Dati aziendali</h4>
         
                         <p>
-                            Castelnuovo Rangone - 41051 <br>
-                            Provincia di Modena <br>
-                            Italia
+                            Ferrari Erik <br>
+                            Castelnuovo Rangone(MO)<br>
+                            PIVA: 03930440361
                         </p>
                     </div>
 
@@ -428,7 +428,7 @@
         
                         <ul class="contact-list">
                             <li><a href="https://www.instagram.com/erikwski_dev/">Instagram</a></li>
-                            <li><a href="https://www.linkedin.com/in/erik-ferrari-4074161a2/">Linkedin</a></li>
+                            <li><a href="https://github.com/erikwski">Github</a></li>
                             <li><a href="https://twitter.com/erikwski">Twitter</a></li>
                         </ul>
                     </div>
