Aggiunta privacy policy

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 
                 <div class="row s-footer__bottom">
                     <div class="column ss-copyright">
-                        <span>© Copyright Erikwksi 2022</span> 
+                        <a href="policy.html">© Privacy policy Erikwksi 2022</a>
                     </div>
 
                     <div class="ss-go-top">
