Aggiornata sezione i miei progetti

--- a/index.html
+++ b/index.html
@@ -243,12 +243,41 @@
 
             <div class="row section-header section-header--dark has-bottom-sep">
                 <div class="column lg-12">
-                    <h3 class="text-pretitle">Progetti</h3>
-                    <h1 class="text-display-title">Qui potrai trovare tutti i miei progetti preferiti in corso/completati</h1>
+                    <h3 class="text-pretitle">Alcuni dei miei progetti</h3>
+                    <!-- <h1 class="text-display-title">Qui potrai trovare tutti i miei progetti preferiti in corso/completati</h1> -->
                 </div>
-                <span>
-                    Sfortunatamente, al momento tutti i miei progetti sono in fase di sviluppo oppure sono stati effettuati per clienti che non gradiscono che io utilizzi il loro prodotto per pubbblicità personale
-                </span>
+                <div id="progetti">
+                    <div class="progetto">
+                        <div class="desc_progetto">
+                            <h4>Tammagency</h4>
+                            <label>Digital marketing agency</label>
+                            <p>
+                                Tammagency è una nuovissima realtà che si offre di aiutare le aziende ad innovare tutto il loro lato digital. 
+                                Si va quindi ad occupare della gestione dei social network e del marketing per ampliare il pubblico dell'attività.</p>
+                            <a href="https://tammagency.com/" target="_blank">Visualizza sito web</a>
+                        </div>
+                        <div class="container_img">
+                            <img src="images/tammagency.png">
+                            <a href="https://tammagency.com/" target="_blank">Visualizza sito web</a>
+                        </div>
+                    </div>
+                    <div class="progetto">
+                        <div class="container_img">
+                            <img src="images/alexrunningcoach.png">
+                            <a href="https://alexrunningcoach.com/" target="_blank">Visualizza sito web</a>
+                        </div>
+                        <div class="desc_progetto">
+                            <h4>Alex running coach</h4>
+                            <label>Allenatore di Running</label>
+                            <p>
+                                Alex allena tutti i tipi di Runners, dai principianti ai professionisti.
+                                Alex crea programmi running su misura di ogni suo singolo atleta cucito per lui per raggiungere l'obiettivo richiesto.
+                                Da poco è uficialmente diventato partner Asics Frontrunner continuando ad incrementare la sua community.
+                            </p>
+                            <a href="https://alexrunningcoach.com/" target="_blank">Visualizza sito web</a>
+                        </div>
+                    </div>
+                </div>
             </div> <!-- end section-header -->
 
             <div style="margin: 0;" class="row folio-list block-lg-one-third block-tab-one-half block-stack-on-550 collapse" data-animate-block>
@@ -445,7 +474,7 @@
 
                 <div class="row s-footer__bottom">
                     <div class="column ss-copyright">
-                        <a href="policy.html">© Privacy policy Erikwksi 2022</a>
+                        <a href="policy.html">© Privacy policy Erikwksi 2022</a> 
                     </div>
 
                     <div class="ss-go-top">
